--- a/index.html
+++ b/index.html
@@ -970,40 +970,6 @@
       </div>
     </div></div>
   </div>
-  <!-- Modal Telah Hadir (Backdate First Visit + PDPA + Lab Decision) -->
-  <div class="modal fade" id="telahHadirModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered"><div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title"><i class="fa-solid fa-user-check me-2"></i> Tandakan Telah Hadir</h5>
-        <button class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-      <div class="modal-body">
-        <input type="hidden" id="telahHadirIC">
-        <div id="telahHadirStep1">
-          <div class="mb-2">
-            <label class="form-label">Tarikh Hadir Sebenar</label>
-            <input type="date" id="telahHadirDate" class="form-control" required>
-            <div class="form-text">Pilih tarikh sebenar pesakit hadir (boleh tarikh lepas).</div>
-          </div>
-          <div class="mb-2">
-            <label class="form-label">Muat Naik PDPA</label>
-            <input type="file" id="telahHadirPDPA" class="form-control" accept="application/pdf,image/*" required>
-          </div>
-        </div>
-        <div id="telahHadirStep2" class="d-none">
-          <div class="alert alert-info small">Adakah keputusan darah daripada makmal telah diterima?</div>
-          <div class="d-flex gap-2">
-            <button class="btn btn-success" id="btnTelahHadirLabYes"><i class="fa-solid fa-vial-circle-check me-1"></i> Ya, sudah diterima</button>
-            <button class="btn btn-outline-secondary" id="btnTelahHadirLabNo"><i class="fa-solid fa-hourglass-half me-1"></i> Belum diterima</button>
-          </div>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
-        <button class="btn btn-primary" id="btnTelahHadirNext"><i class="fa-solid fa-floppy-disk me-1"></i> Simpan & Teruskan</button>
-      </div>
-    </div></div>
-  </div>
 
   <!-- Modal WhatsApp Report Preview -->
   <div class="modal fade" id="whatsappReportModal" tabindex="-1" aria-hidden="true">
@@ -1029,7 +995,47 @@
     </div></div>
   </div>
   
-  <!-- Toast Host (kanan atas) -->
+  
+  <!-- Modal: Telah Hadir (retrospektif) -->
+  <div class="modal fade" id="telahHadirModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title"><i class="fa-solid fa-user-check me-2"></i>Tandakan Telah Hadir</h5>
+          <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <input type="hidden" id="th_noIC">
+          <div class="mb-3">
+            <label class="form-label">Tarikh Hadir Sebenar</label>
+            <input type="date" id="th_date" class="form-control" required />
+          </div>
+          <div class="mb-3">
+            <label class="form-label">Muat naik PDPA (wajib)</label>
+            <input type="file" id="th_file" class="form-control" accept=".pdf,image/*" required />
+            <div class="form-text">PDF atau imej (JPG/PNG). Saiz munasabah disyorkan.</div>
+          </div>
+          <div class="mb-2">Adakah keputusan darah makmal telah diterima?</div>
+          <div class="d-flex gap-4">
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="th_lab" id="th_lab_yes" value="yes">
+              <label class="form-check-label" for="th_lab_yes">Ya</label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="th_lab" id="th_lab_no" value="no" checked>
+              <label class="form-check-label" for="th_lab_no">Tidak</label>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-secondary" data-bs-dismiss="modal">Batal</button>
+          <button class="btn btn-primary" id="th_submit"><i class="fa-solid fa-save me-1"></i> Simpan</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!-- Toast Host (kanan atas) -->
   <div id="toastHost"><div id="toastContainer" class="toast-container"></div></div>
 
   <!-- FAB Log Calls -->
@@ -3384,10 +3390,8 @@ async function loadTCACallData(){
         </td>
         <td>${p.alamat || '-'}</td>
         <td>${p.tarikhTCA}</td>
-        <td><span class="badge ${p.status==='CALLED'?'bg-success':'bg-warning'}">${p.status || 'PENDING'}</span>
-            ${(!within && !hadir) ? `<button class="btn btn-sm btn-warning" onclick="openTelahHadir('${p.noIC}')"><i class="fa-solid fa-user-check"></i> Telah Hadir</button>` : ''}
-          </td>
-        </tr>`;
+        <td><span class="badge ${p.status==='CALLED'?'bg-success':'bg-warning'}">${p.status || 'PENDING'}</span></td>
+      </tr>`;
     };
 
     if (data.status==='success' && data.data.length>0){
@@ -4272,30 +4276,13 @@ const saveNadiStateDebounced = debounce(saveNadiState, 400);
         const s = ((r.nama||'') + ' ' + (r.noIC||'') + ' ' + (r.noTelefon||'')).toLowerCase();
         return !q || s.includes(q);
       });
-      
       tbody.innerHTML = filtered.map((r, i)=>`
-        <tr data-activity-id="${activityId}" data-no="${r.no||String(i+1)}">
-          <td>${i+1}</td>
-          <td>${r.nama||''}</td>
-          <td>${r.noIC||''}</td>
-          <td>${r.noTelefon||''}</td>
-          <td>${r.alamat||''}</td>
-          <td>${r.status||''}</td>
-          <td>${r.bp||''}</td>
-          <td>${r.pr||''}</td>
-          <td>${r.dxt||''}</td>
-          <td>${r.bmi||''}</td>
-          <td>${r.tcaDate||''} ${r.tcaTime||''}</td>
-          <td>${r.tcaStaff||''}</td>
-          <td>
-            <div class="d-flex justify-content-between align-items-center gap-2">
-              <span class="flex-grow-1">${r.remark||''}</span>
-              <button class="btn btn-sm btn-outline-primary" type="button" data-edit-row><i class="fa-solid fa-pen-to-square"></i> Edit</button>
-            </div>
-          </td>
+        <tr>
+          <td>${i+1}</td><td>${r.nama||''}</td><td>${r.noIC||''}</td><td>${r.noTelefon||''}</td><td>${r.alamat||''}</td>
+          <td>${r.status||''}</td><td>${r.bp||''}</td><td>${r.pr||''}</td><td>${r.dxt||''}</td><td>${r.bmi||''}</td>
+          <td>${r.tcaDate||''} ${r.tcaTime||''}</td><td>${r.tcaStaff||''}</td><td>${r.remark||''}</td>
         </tr>
       `).join('') || '<tr><td colspan="13" class="text-center text-muted">Tiada padanan carian.</td></tr>';
-    
     }catch(e){
       tbody.innerHTML = '<tr><td colspan="13" class="text-center text-danger">Ralat memuat maklumat.</td></tr>';
     }
@@ -5555,6 +5542,259 @@ if (btn) {
   }
 
   window.addEventListener('load', initGsi);
+})();
+</script>
+
+
+<script>
+// === Penambahbaikan: Edit Sejarah & Butang TELAH HADIR ===
+(function(){
+  'use strict';
+
+  // ---------- Util tarikh ----------
+  function toIso(ddmmyyyy){
+    const m = /^([0-9]{2})\/([0-9]{2})\/([0-9]{4})$/.exec(ddmmyyyy||'');
+    return m ? (m[3]+'-'+m[2]+'-'+m[1]) : (ddmmyyyy||'');
+  }
+  function toDisplay(iso){
+    const m = /^([0-9]{4})-([0-9]{2})-([0-9]{2})$/.exec(iso||'');
+    return m ? (m[3]+'/'+m[2]+'/'+m[1]) : (iso||'');
+  }
+
+  // ---------- Sejarah: Edit inline ----------
+  window.CURRENT_ACTIVITY_ID = window.CURRENT_ACTIVITY_ID || '';
+
+  function getCurrentActivityId(){
+    const active = document.querySelector('#programList .list-group-item.active');
+    return active ? active.getAttribute('data-activity-id') : (window.CURRENT_ACTIVITY_ID||'');
+  }
+  function ensureSejarahHeaderActions(){
+    const thRow = document.querySelector('#sejarah table thead tr');
+    if (!thRow) return;
+    const lastTh = thRow.querySelector('th:last-child');
+    if (!lastTh) return;
+    if (!/tindakan/i.test(lastTh.textContent||'')){
+      const th = document.createElement('th');
+      th.className = 'col-actions'; th.textContent = 'Tindakan';
+      thRow.appendChild(th);
+    }
+  }
+  function enhanceSejarahRow(tr){
+    if (!tr || tr.dataset.enhanced==='1') return;
+    // Abaikan baris placeholder (row yang colspan)
+    if (tr.querySelector('td[colspan]')) return;
+    tr.dataset.enhanced = '1';
+    const noCell = tr.querySelector('td'); // kolum pertama "#"
+    const no = (noCell?.textContent||'').trim();
+    tr.dataset.rowNo = no;
+
+    // Tambah kolum Tindakan
+    const td = document.createElement('td');
+    td.className = 'mini-actions edit-actions';
+    td.innerHTML = '<button class="btn btn-sm btn-outline-primary btn-edit">Edit</button> ' +
+                   '<button class="btn btn-sm btn-success btn-save d-none">Simpan</button> ' +
+                   '<button class="btn btn-sm btn-secondary btn-cancel d-none">Batal</button>';
+    tr.appendChild(td);
+
+    td.querySelector('.btn-edit').addEventListener('click', ()=> enterEdit(tr));
+    td.querySelector('.btn-save').addEventListener('click', ()=> saveEdit(tr));
+    td.querySelector('.btn-cancel').addEventListener('click', ()=> exitEdit(tr, true));
+  }
+  function enterEdit(tr){
+    tr.classList.add('editing');
+    const btnEdit = tr.querySelector('.btn-edit');
+    const btnSave = tr.querySelector('.btn-save');
+    const btnCancel = tr.querySelector('.btn-cancel');
+    if (btnEdit) btnEdit.classList.add('d-none');
+    if (btnSave) btnSave.classList.remove('d-none');
+    if (btnCancel) btnCancel.classList.remove('d-none');
+
+    // Susunan kolum: [#, Nama, IC, Telefon, Alamat, Status, BP, PR, DXT, BMI, TCA, Staff, Remark, (Tindakan)]
+    const cells = tr.querySelectorAll('td');
+    const map = [null,'nama','noIC','noTelefon','alamat','status','bp','pr','dxt','bmi','tca','tcaStaff','remark'];
+    for (let i=1;i<cells.length-1;i++){
+      const field = map[i];
+      if (!field) continue;
+      const td = cells[i];
+      const text = (td.textContent||'').trim();
+      td.dataset.orig = text;
+      if (field==='status'){
+        td.innerHTML = '<select class="form-select form-select-sm">\
+          <option value=""></option>\
+          <option value="LAYAK">LAYAK</option>\
+          <option value="TAK LAYAK">TAK LAYAK</option>\
+        </select>';
+        td.querySelector('select').value = text.toUpperCase();
+      } else if (field==='tca'){
+        const mDate = text.match(/(\d{2}\/\d{2}\/\d{4})/);
+        const mTime = text.match(/(\d{2}:\d{2})/);
+        td.innerHTML = '<div class="d-flex gap-1 align-items-center">\
+          <input type="date" class="form-control form-control-sm" data-field="tcaDate">\
+          <input type="time" class="form-control form-control-sm" data-field="tcaTime">\
+        </div>';
+        if (mDate) td.querySelector('[data-field="tcaDate"]').value = toIso(mDate[1]);
+        if (mTime) td.querySelector('[data-field="tcaTime"]').value = mTime[1];
+      } else {
+        const type = (field==='bmi')?'number':(field==='noTelefon'?'tel':'text');
+        td.innerHTML = '<input class="form-control form-control-sm" type="'+type+'" data-field="'+field+'" />';
+        td.querySelector('input').value = text;
+      }
+    }
+  }
+  async function saveEdit(tr){
+    try{
+      const no = tr.dataset.rowNo || '';
+      const activityId = getCurrentActivityId();
+      if (!no || !activityId){ toast('ID baris atau Aktiviti tidak sah', 'warning'); return; }
+      const cells = tr.querySelectorAll('td');
+      const map = [null,'nama','noIC','noTelefon','alamat','status','bp','pr','dxt','bmi','tca','tcaStaff','remark'];
+      const payload = { action:'updateNadiParticipant', activityId, no };
+      for (let i=1;i<cells.length-1;i++){
+        const field = map[i]; if (!field) continue;
+        const td = cells[i];
+        if (field==='status'){
+          payload.status = (td.querySelector('select')?.value || '').trim();
+        } else if (field==='tca'){
+          payload.tcaDate = (td.querySelector('[data-field="tcaDate"]')?.value || '').trim();
+          payload.tcaTime = (td.querySelector('[data-field="tcaTime"]')?.value || '').trim();
+        } else {
+          payload[field] = (td.querySelector('input')?.value || td.textContent || '').trim();
+        }
+      }
+      const res = await postForm(payload, { msg:'Menyimpan peserta…' });
+      if (!res || res.status!=='success') throw new Error(res && (res.message||res.code)||'Gagal simpan');
+      // Kembali ke paparan
+      exitEdit(tr, false, payload);
+      toast('Rekod berjaya dikemaskini');
+    }catch(e){
+      console.error(e);
+      toast('Ralat semasa simpan: '+(e.message||e), 'danger');
+    }
+  }
+  function exitEdit(tr, restore, updated){
+    const btnEdit = tr.querySelector('.btn-edit');
+    const btnSave = tr.querySelector('.btn-save');
+    const btnCancel = tr.querySelector('.btn-cancel');
+    if (btnEdit) btnEdit.classList.remove('d-none');
+    if (btnSave) btnSave.classList.add('d-none');
+    if (btnCancel) btnCancel.classList.add('d-none');
+
+    const cells = tr.querySelectorAll('td');
+    const map = [null,'nama','noIC','noTelefon','alamat','status','bp','pr','dxt','bmi','tca','tcaStaff','remark'];
+    for (let i=1;i<cells.length-1;i++){
+      const field = map[i]; if (!field) continue;
+      const td = cells[i];
+      const orig = td.dataset.orig || '';
+      if (restore){
+        td.textContent = orig;
+      } else {
+        if (field==='tca'){
+          const d = updated?.tcaDate ? toDisplay(updated.tcaDate) : '';
+          const t = (updated?.tcaTime||'').trim();
+          td.textContent = d && t ? (d+' '+t) : (d||t||orig);
+        } else {
+          td.textContent = (updated && updated[field]!=null) ? updated[field] : orig;
+        }
+      }
+      delete td.dataset.orig;
+    }
+    tr.classList.remove('editing');
+  }
+
+  // Observe sejarah table for re-render
+  const sejarahObserver = new MutationObserver(()=>{
+    ensureSejarahHeaderActions();
+    document.querySelectorAll('#sejarahTable tr').forEach(enhanceSejarahRow);
+  });
+
+  // ---------- First Visit: Butang TELAH HADIR ----------
+  function openTelahHadir(noIC){
+    const m = new bootstrap.Modal(document.getElementById('telahHadirModal'));
+    document.getElementById('th_noIC').value = noIC || '';
+    document.getElementById('th_date').value = '';
+    document.getElementById('th_file').value = '';
+    document.getElementById('th_lab_no').checked = true;
+    m.show();
+  }
+  async function fileToBase64(file){
+    return new Promise((resolve,reject)=>{
+      const r = new FileReader();
+      r.onload = () => resolve(String(r.result).split(',')[1]||'');
+      r.onerror = reject;
+      r.readAsDataURL(file);
+    });
+  }
+  async function submitTelahHadir(){
+    try{
+      const noIC = document.getElementById('th_noIC').value.trim();
+      const dateIso = document.getElementById('th_date').value;
+      const fileEl = document.getElementById('th_file');
+      const labDone = document.getElementById('th_lab_yes').checked;
+      if (!noIC){ toast('IC tidak sah', 'warning'); return; }
+      if (!dateIso){ toast('Sila pilih tarikh hadir', 'warning'); return; }
+      if (!fileEl.files || !fileEl.files[0]){ toast('Sila muat naik PDPA', 'warning'); return; }
+      const f = fileEl.files[0];
+      const b64 = await fileToBase64(f);
+      // 1) Upload PDPA
+      const up = await postForm({ action:'uploadPDPA', noIC, fileName:f.name, fileType:(f.type||'application/octet-stream'), fileBase64:b64 }, { msg:'Memuat naik PDPA…' });
+      if (!up || up.status!=='success') throw new Error(up && (up.message||up.code)||'Gagal upload PDPA');
+      // 2) Tandakan Telah Hadir (tarikh sebenar) + cabang lab
+      const r = await postForm({ action:'markTelahHadir', noIC, firstVisitDate: dateIso, labDone: labDone ? 'YES' : 'NO' }, { msg:'Mengemaskini status…' });
+      if (!r || r.status!=='success') throw new Error(r && (r.message||r.code)||'Gagal kemas kini status');
+      // Tutup modal & refresh paparan
+      bootstrap.Modal.getInstance(document.getElementById('telahHadirModal'))?.hide();
+      toast('Ditandakan Telah Hadir');
+      // Refresh First Visit dan alih ke tab sesuai
+      window.loadFirstVisitData && window.loadFirstVisitData();
+      setTimeout(()=>{
+        if (labDone){ location.hash = '#second-visit'; window.loadSecondVisitData && window.loadSecondVisitData(); }
+        else { location.hash = '#lab-followup'; window.loadLabFollowUp && window.loadLabFollowUp(); }
+      }, 200);
+    }catch(e){
+      console.error(e);
+      toast('Ralat: '+(e.message||e), 'danger');
+    }
+  }
+
+  function injectTelahHadirButtons(){
+    document.querySelectorAll('#firstVisitList tr').forEach(tr=>{
+      if (tr.dataset._th_injected==='1') return;
+      // Abaikan row placeholder
+      if (tr.querySelector('td[colspan]')) return;
+      tr.dataset._th_injected = '1';
+      const tds = tr.querySelectorAll('td');
+      const statusCell = tds[tds.length-2];
+      const tindakanCell = tds[tds.length-1];
+      const icCell = tds[1]; // urutan: Nama, IC, Telefon, Alamat, Tarikh TCA, PDPA, Status, Tindakan
+      const statusTxt = (statusCell?.textContent||'').toLowerCase();
+      const ic = (icCell?.textContent||'').trim();
+      if (/belum/.test(statusTxt) && tindakanCell && ic){
+        const btn = document.createElement('button');
+        btn.className = 'btn btn-sm btn-warning me-1';
+        btn.innerHTML = '<i class="fa-solid fa-user-check me-1"></i> Telah Hadir';
+        btn.addEventListener('click', ()=> openTelahHadir(ic));
+        tindakanCell.prepend(btn);
+      }
+    });
+  }
+
+  // Observers
+  window.addEventListener('DOMContentLoaded', ()=>{
+    const sejarahTbody = document.getElementById('sejarahTable');
+    if (sejarahTbody){ sejarahObserver.observe(sejarahTbody, { childList:true }); }
+    const firstVisitTbody = document.getElementById('firstVisitList');
+    if (firstVisitTbody){
+      const obs = new MutationObserver(injectTelahHadirButtons);
+      obs.observe(firstVisitTbody, { childList:true });
+    }
+    document.getElementById('th_submit')?.addEventListener('click', submitTelahHadir);
+  });
+  // Simpan aktivitiId bila klik program
+  document.addEventListener('click', (e)=>{
+    const item = e.target.closest('#programList .list-group-item');
+    if (item) window.CURRENT_ACTIVITY_ID = item.getAttribute('data-activity-id') || '';
+  });
+
 })();
 </script>
 
