--- a/index.html
+++ b/index.html
@@ -307,29 +307,6 @@
 .nadi-table td.text-center, .nadi-table th.text-center { vertical-align: middle; }
 .nadi-table td:last-child .btn { margin: 2px 4px; white-space: nowrap; }
 </style>
-<style>
-/* === UI Kemas: jadual scroll dalam kad + penambahbaikan kecil === */
-.sejarah-table-wrap{
-  max-height: 62vh;
-  overflow: auto;
-  border: 1px solid rgba(0,0,0,.06);
-  border-radius: .5rem;
-}
-#sejarah table thead.sticky-top{ top: 0; z-index: 2; }
-#sejarah table.table{ margin-bottom: 0; }
-#sejarah .mini-actions .btn{ padding: .25rem .5rem; }
-
-/* Kekalkan tinggi konsisten untuk layout First Visit */
-#first-visit .table-responsive{ max-height: 62vh; overflow:auto; }
-#first-visit thead.sticky-top{ top: 0; z-index: 2; }
-
-/* Sedikit padding untuk kad utama */
-#sejarah .card, #first-visit .card{ box-shadow: var(--bs-box-shadow-sm, 0 .125rem .25rem rgba(0,0,0,.075)); border: 1px solid rgba(0,0,0,.06); border-radius: .75rem; }
-#sejarah .card > .card-header, #first-visit .card > .card-header{ position: sticky; top: 0; z-index: 3; background: var(--bs-body-bg); }
-
-/* Edit mode highlight */
-tr.editing{ background: rgba(255, 243, 205, .4); }
-</style>
 
   <style>
     /* --- UI Kemas & Tersusun (penambahbaikan) --- */
@@ -340,7 +317,7 @@ tr.editing{ background: rgba(255, 243, 205, .4); }
     }
     .sejarah-scroll table thead th {
       position: sticky; top: 0;
-      background: var(--bs-light); /* pastikan header tidak transparen */
+      background: var(--bs-light);
       z-index: 2; 
       box-shadow: inset 0 -1px 0 rgba(0,0,0,.05);
     }
@@ -516,7 +493,7 @@ tr.editing{ background: rgba(255, 243, 205, .4); }
         </div>
         <div class="card-body">
           <div class="table-responsive">
-            <table class="table table-sm table-hover align-middle">
+            <table class="table table-hover align-middle">
               <thead class="table-light"><tr><th>Nama Pesakit</th><th>No IC</th><th>No Telefon</th><th>Alamat</th><th>Tarikh TCA</th><th>Status</th></tr></thead>
               <tbody id="tcaCallTable"><tr><td colspan="6" class="text-center text-muted">Memuat data...</td></tr></tbody>
             </table>
@@ -701,7 +678,7 @@ tr.editing{ background: rgba(255, 243, 205, .4); }
           </div>
         </div>
         <div class="table-responsive">
-          <table class="table table-sm table-hover align-middle">
+          <table class="table table-hover align-middle">
             <thead class="table-light">
               <tr>
                 <th>Nama</th><th>IC</th><th>Telefon</th><th>Alamat</th>
@@ -731,7 +708,7 @@ tr.editing{ background: rgba(255, 243, 205, .4); }
       </div>
       <div class="card"><div class="card-body">
         <div class="table-responsive">
-          <table class="table table-sm table-hover align-middle">
+          <table class="table table-hover align-middle">
             <thead class="table-light"><tr><th>Nama Pesakit</th><th>No IC</th><th>No Telefon</th><th>Alamat</th><th>Tarikh TCA</th><th>Status</th></tr></thead>
             <tbody id="tcaCallList"><tr><td colspan="6" class="text-center text-muted">Memuat data...</td></tr></tbody>
           </table>
@@ -747,8 +724,8 @@ tr.editing{ background: rgba(255, 243, 205, .4); }
       </div>
       <div class="card"><div class="card-body">
         <div class="table-responsive">
-          <table class="table table-sm table-hover align-middle">
-            <thead class="table-light sticky-top"><tr><th>Nama Pesakit</th><th>No IC</th><th>Alamat</th><th>Tarikh TCA</th><th>PDPA</th><th>Status</th><th>Tindakan</th></tr></thead>
+          <table class="table table-hover align-middle">
+            <thead class="table-light"><tr><th>Nama Pesakit</th><th>No IC</th><th>Alamat</th><th>Tarikh TCA</th><th>PDPA</th><th>Status</th><th>Tindakan</th></tr></thead>
             <tbody id="firstVisitList"><tr><td colspan="7" class="text-center text-muted">Memuat data...</td></tr></tbody>
           </table>
         </div>
@@ -763,7 +740,7 @@ tr.editing{ background: rgba(255, 243, 205, .4); }
       </div>
       <div class="card"><div class="card-body">
         <div class="table-responsive">
-          <table class="table table-sm table-hover align-middle">
+          <table class="table table-hover align-middle">
             <thead class="table-light">
               <tr><th>Nama</th><th>IC</th><th>Telefon</th><th>Alamat</th><th>Tarikh First Visit</th><th>Hari Ke-</th><th>Status</th><th>Tindakan</th></tr>
             </thead>
@@ -781,7 +758,7 @@ tr.editing{ background: rgba(255, 243, 205, .4); }
       </div>
       <div class="card"><div class="card-body">
         <div class="table-responsive">
-          <table class="table table-sm table-hover align-middle">
+          <table class="table table-hover align-middle">
             <thead class="table-light"><tr><th>Nama Pesakit</th><th>No IC</th><th>Alamat</th><th>Tarikh TCA</th><th>PDPA</th><th>Status</th><th>Tindakan</th></tr></thead>
             <tbody id="secondVisitList"><tr><td colspan="7" class="text-center text-muted">Memuat data...</td></tr></tbody>
           </table>
@@ -797,7 +774,7 @@ tr.editing{ background: rgba(255, 243, 205, .4); }
       </div>
       <div class="card mb-3"><div class="card-body">
         <div class="table-responsive">
-          <table class="table table-sm table-hover align-middle">
+          <table class="table table-hover align-middle">
             <thead class="table-light">
               <tr>
                 <th>Nama Pesakit</th><th>No IC</th><th>No Telefon</th><th>Alamat</th><th>PDPA</th>
@@ -842,7 +819,7 @@ tr.editing{ background: rgba(255, 243, 205, .4); }
       </div>
       <div class="card"><div class="card-body">
         <div class="table-responsive">
-          <table class="table table-sm table-hover align-middle">
+          <table class="table table-hover align-middle">
             <thead class="table-light"><tr><th>Nama Pesakit</th><th>No IC</th><th>No Telefon</th><th>Alamat</th><th>Tarikh Daftar</th><th>Tarikh Selesai</th><th>Diarkib</th><th>Tindakan</th></tr></thead>
             <tbody id="archiveTable"><tr><td colspan="8" class="text-center text-muted">Tiada rekod arkib</td></tr></tbody>
           </table>
@@ -930,7 +907,7 @@ tr.editing{ background: rgba(255, 243, 205, .4); }
         </div>
         <div class="card-body">
           <div class="table-responsive sejarah-table-wrap">
-            <table class="table table-sm table-hover align-middle">
+            <table class="table table-hover align-middle">
               <thead class="table-light sticky-top">
                 <tr>
                   <th style="width:56px">#</th>
@@ -2480,9 +2457,6 @@ function calculateAgeFromIC(ic) {
 }
 
 function updateNadiSummary() {
-  // Reset paparan dahulu
-  const _lay = document.getElementById('nadiLayakCount'); if (_lay) _lay.textContent = '0';
-  const _tak = document.getElementById('nadiTakLayakCount'); if (_tak) _tak.textContent = '0';
   let layakCount = 0;
   let takLayakCount = 0;
   
@@ -2763,9 +2737,6 @@ takLayak.addEventListener('change', ()=> queueSaveNadiLive(row));
 row.dataset.rowId = row.id;
 }
 
-
-// Kemas kini ringkasan selepas tambah baris
-try{ updateNadiSummary(); }catch(_e){}
 function updateNadiRowData(row) {
   const rowData = {
     nama: row.querySelector('.nadi-nama').value.trim(),
@@ -4194,9 +4165,6 @@ const saveNadiStateDebounced = debounce(saveNadiState, 400);
   if (nadiContainer) {
     const mo = new MutationObserver(()=>{ ensureVoucherColumns(); });
     mo.observe(nadiContainer, {childList:true, subtree:false});
-    // Auto update ringkasan bila baris berubah
-    const mo2 = new MutationObserver(()=>{ try{ updateNadiSummary(); }catch(_e){} });
-    mo2.observe(nadiContainer, {childList:true});
   }
 
   // Intercept Simpan Aktiviti: proses baris voucher → daftar sebagai TCA CALL (remark "Saringan kesihatan voucher")
@@ -4274,7 +4242,6 @@ const saveNadiStateDebounced = debounce(saveNadiState, 400);
       document.querySelectorAll('#nadiContainer tr').forEach(tr=>{
         if (tr.querySelector('input[name="voucher"]')?.checked) tr.remove();
       });
-      updateNadiSummary();
       saveNadiState();
     }
     // Teruskan handler asal (jika ada) – kita tidak preventDefault
@@ -5607,17 +5574,17 @@ if (btn) {
 
 
 <script>
-// === Penambahbaikan: Edit Sejarah & Butang TELAH HADIR ===
+// === Penambahbaikan: Edit Sejarah & Butang TELAH HADIR (warna ikut status TCA) ===
 (function(){
   'use strict';
 
   // ---------- Util tarikh ----------
   function toIso(ddmmyyyy){
-    const m = /^([0-9]{2})\/([0-9]{2})\/([0-9]{4})$/.exec(ddmmyyyy||'');
+    const m = /^(\d{2})\/(\d{2})\/(\d{4})$/.exec(ddmmyyyy||'');
     return m ? (m[3]+'-'+m[2]+'-'+m[1]) : (ddmmyyyy||'');
   }
   function toDisplay(iso){
-    const m = /^([0-9]{4})-([0-9]{2})-([0-9]{2})$/.exec(iso||'');
+    const m = /^(\d{4})-(\d{2})-(\d{2})$/.exec(iso||'');
     return m ? (m[3]+'/'+m[2]+'/'+m[1]) : (iso||'');
   }
 
@@ -5641,8 +5608,7 @@ if (btn) {
   }
   function enhanceSejarahRow(tr){
     if (!tr || tr.dataset.enhanced==='1') return;
-    // Abaikan baris placeholder (row yang colspan)
-    if (tr.querySelector('td[colspan]')) return;
+    if (tr.querySelector('td[colspan]')) return; // placeholder
     tr.dataset.enhanced = '1';
     const noCell = tr.querySelector('td'); // kolum pertama "#"
     const no = (noCell?.textContent||'').trim();
@@ -5688,6 +5654,7 @@ if (btn) {
       } else if (field==='tca'){
         const mDate = text.match(/(\d{2}\/\d{2}\/\d{4})/);
         const mTime = text.match(/(\d{2}:\d{2})/);
+        td.classList.add('col-tca');
         td.innerHTML = '<div class="d-flex gap-1 align-items-center">\
           <input type="date" class="form-control form-control-sm" data-field="tcaDate">\
           <input type="time" class="form-control form-control-sm" data-field="tcaTime">\
@@ -5723,7 +5690,6 @@ if (btn) {
       }
       const res = await postForm(payload, { msg:'Menyimpan peserta…' });
       if (!res || res.status!=='success') throw new Error(res && (res.message||res.code)||'Gagal simpan');
-      // Kembali ke paparan
       exitEdit(tr, false, payload);
       toast('Rekod berjaya dikemaskini');
     }catch(e){
@@ -5798,13 +5764,12 @@ if (btn) {
       // 1) Upload PDPA
       const up = await postForm({ action:'uploadPDPA', noIC, fileName:f.name, fileType:(f.type||'application/octet-stream'), fileBase64:b64 }, { msg:'Memuat naik PDPA…' });
       if (!up || up.status!=='success') throw new Error(up && (up.message||up.code)||'Gagal upload PDPA');
-      // 2) Tandakan Telah Hadir (tarikh sebenar) + cabang lab
+      // 2) Tandakan Telah Hadir (tarikh sebenar) + cabang makmal
       const r = await postForm({ action:'markTelahHadir', noIC, firstVisitDate: dateIso, labDone: labDone ? 'YES' : 'NO' }, { msg:'Mengemaskini status…' });
       if (!r || r.status!=='success') throw new Error(r && (r.message||r.code)||'Gagal kemas kini status');
-      // Tutup modal & refresh paparan
       bootstrap.Modal.getInstance(document.getElementById('telahHadirModal'))?.hide();
       toast('Ditandakan Telah Hadir');
-      // Refresh First Visit dan alih ke tab sesuai
+      // Refresh & navigasi
       window.loadFirstVisitData && window.loadFirstVisitData();
       setTimeout(()=>{
         if (labDone){ location.hash = '#second-visit'; window.loadSecondVisitData && window.loadSecondVisitData(); }
@@ -5816,21 +5781,32 @@ if (btn) {
     }
   }
 
+  function isTcaOverdue(ddmmyyyy){
+    // gunakan util global parseDDMMYYYY jika wujud dalam index asal
+    const d = (typeof parseDDMMYYYY === 'function') ? parseDDMMYYYY(ddmmyyyy) : null;
+    if (!d) return false;
+    const end = new Date(d.getFullYear(), d.getMonth(), d.getDate(), 23,59,59,999);
+    return new Date() > end;
+  }
   function injectTelahHadirButtons(){
     document.querySelectorAll('#firstVisitList tr').forEach(tr=>{
       if (tr.dataset._th_injected==='1') return;
-      // Abaikan row placeholder
       if (tr.querySelector('td[colspan]')) return;
       tr.dataset._th_injected = '1';
       const tds = tr.querySelectorAll('td');
+      // First Visit table order: Nama, NoIC, Alamat, Tarikh TCA, PDPA, Status, Tindakan
+      const icCell = tds[1];
+      const tcaCell = tds[3];
       const statusCell = tds[tds.length-2];
       const tindakanCell = tds[tds.length-1];
-      const icCell = tds[1]; // urutan: Nama, IC, Telefon, Alamat, Tarikh TCA, PDPA, Status, Tindakan
-      const statusTxt = (statusCell?.textContent||'').toLowerCase();
       const ic = (icCell?.textContent||'').trim();
+      const statusTxt = (statusCell?.textContent||'').toLowerCase();
+      const tcaStr = (tcaCell?.textContent||'').trim();
       if (/belum/.test(statusTxt) && tindakanCell && ic){
+        const overdue = isTcaOverdue(tcaStr);
+        const cls = overdue ? 'btn-warning' : 'btn-secondary'; // kelabu jika belum terlepas, kuning jika sudah terlepas
         const btn = document.createElement('button');
-        btn.className = 'btn btn-sm btn-warning me-1';
+        btn.className = 'btn btn-sm '+cls+' me-1';
         btn.innerHTML = '<i class="fa-solid fa-user-check me-1"></i> Telah Hadir';
         btn.addEventListener('click', ()=> openTelahHadir(ic));
         tindakanCell.prepend(btn);
@@ -5848,7 +5824,11 @@ if (btn) {
       obs.observe(firstVisitTbody, { childList:true });
     }
     document.getElementById('th_submit')?.addEventListener('click', submitTelahHadir);
+
+    // Pastikan kiraan NADI bermula pada 0 (defensif) sehingga checkbox ditanda
+    if (typeof updateNadiSummary === 'function') updateNadiSummary();
   });
+
   // Simpan aktivitiId bila klik program
   document.addEventListener('click', (e)=>{
     const item = e.target.closest('#programList .list-group-item');
@@ -5856,16 +5836,6 @@ if (btn) {
   });
 
 })();
-</script>
-
-
-<script>
-  // Pastikan kiraan NADI bermula pada 0 sehingga kotak ditanda
-  document.addEventListener('DOMContentLoaded', function(){
-    if (typeof updateNadiSummary === 'function') {
-      updateNadiSummary();
-    }
-  });
 </script>
 
 </body>
